--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,11 +14,11 @@
     </ItemGroup>
     
     <PropertyGroup Label="Package">
-        <Version>1.0.0</Version>
-        <PackageReleaseNotes>Added LightResources repo.</PackageReleaseNotes>
+        <Version>1.0.1</Version>
+        <PackageReleaseNotes>Updated package description.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
-        <Description>Light and dynamic resources for your Blazor website.</Description>
+        <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
         <PackageId>CodeChops.LightResources</PackageId>
         <PackageProjectUrl>https://github.com/code-chops/LightResources</PackageProjectUrl>
         <PackageTags>CodeChops;CodeChops.LightResources;LightResources;Light resources;Dynamic resources;Blazor;</PackageTags>
