--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
     
     <PropertyGroup Label="Package">
-        <Version>1.1.0</Version>
-        <PackageReleaseNotes>Updated packages and fixed.</PackageReleaseNotes>
+        <Version>1.1.1</Version>
+        <PackageReleaseNotes>Updated packages 2.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
@@ -56,7 +56,7 @@
     
     <ItemGroup Label="PackageReferences">
         <PackageReference Include="CodeChops.DomainModeling" Version="2.4.2" />
-        <PackageReference Include="CodeChops.ImplementationDiscovery" Version="1.5.1" />
+        <PackageReference Include="CodeChops.ImplementationDiscovery" Version="1.5.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
