--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.4.5</Version>
-        <PackageReleaseNotes>Simplified.</PackageReleaseNotes>
+        <Version>1.4.6</Version>
+        <PackageReleaseNotes>Changed Regex.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
