--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.4.7</Version>
-        <PackageReleaseNotes>Added CountryCode and LanguageCode.</PackageReleaseNotes>
+        <Version>1.5.0</Version>
+        <PackageReleaseNotes>Changed SupportedLanguageCodes.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
