--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.6.0</Version>
-        <PackageReleaseNotes>Don't add default resources.</PackageReleaseNotes>
+        <Version>1.6.1</Version>
+        <PackageReleaseNotes>Initialization fix.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
