--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.6.3</Version>
-        <PackageReleaseNotes>Updated packages.</PackageReleaseNotes>
+        <Version>1.6.4</Version>
+        <PackageReleaseNotes>IStringLocalizer support.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
@@ -54,6 +54,7 @@
         <PackageReference Include="CodeChops.DomainModeling" Version="2.17.8" />
         <PackageReference Include="CodeChops.ImplementationDiscovery" Version="1.8.7" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.8" />
     </ItemGroup>
 
 </Project>
