--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.6.5</Version>
-        <PackageReleaseNotes>Updated to .net9.</PackageReleaseNotes>
+        <Version>1.6.6</Version>
+        <PackageReleaseNotes>Re-added IStringLocalizer support.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
@@ -54,6 +54,7 @@
         <PackageReference Include="CodeChops.DomainModeling" Version="2.18.4" />
         <PackageReference Include="CodeChops.ImplementationDiscovery" Version="1.8.8" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
