--- a/LightResources/LightResources.csproj
+++ b/LightResources/LightResources.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <PropertyGroup Label="Package">
-        <Version>1.6.6</Version>
-        <PackageReleaseNotes>Re-added IStringLocalizer support.</PackageReleaseNotes>
+        <Version>1.7.0</Version>
+        <PackageReleaseNotes>Updated packages.</PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>CodeChops.LightResources</Title>
         <Description>Light and dynamic resources for your Blazor WebAssembly website.</Description>
@@ -51,10 +51,10 @@
 
     <ItemGroup Label="PackageReferences">
         <PackageReference Include="Architect.AmbientContexts" Version="2.0.1" />
-        <PackageReference Include="CodeChops.DomainModeling" Version="2.18.4" />
-        <PackageReference Include="CodeChops.ImplementationDiscovery" Version="1.8.8" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.0" />
+        <PackageReference Include="Architect.DomainModeling" Version="3.0.3" />
+        <PackageReference Include="CodeChops.ImplementationDiscovery" Version="2.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.2" />
     </ItemGroup>
 
 </Project>
